2014-07-10 Blub

	* database bump: 9
	* storing ELF interpreter data

2014-05-17 Blub

	* integrity check now goes through package replacements

2014-05-03 Blub

	* fix uninitialized refcount_ member
	* convention change: refcount_ members now get an '= 0' in class-defs
		rather than being explicitly initialized in constructors
	* Releasing 0.1.7.1 as hotfix

2014-05-02 Blub

	* fix accidental removal of -flib* filters

2014-04-27 Blub

	* buildfix for 32 bit
	* refactoring and slight speed improvements

2014-02-16 Blub

	* bugfix: --relink didn't properly clear the missing/found sets

2013-12-23 Blub

	* database bump: 8
		OBJREF and PKGREF entries now don't use arbitrary numbers, but represent
		the object's "index". The first object written out has index 0, the second
		index 1 and so on. This avoids lookups in std::maps.
	* more read/write efficient database layout:
		The required_found and required_missing map<>s have been removed. Since
		they mapped each object to one set, this set is now stored in the objects
		itself. This makes install/remove a tiny bit slower, but barely noticable
		and worth the gain. Additionally some deduping and cleanup happened in the
		related areas.
	* --touch option
	* bugfix: fixed some uses of std::remove

2013-12-01 Blub

	* pkglibdepends filter:
		-fpkglibdepends: filter packages which contain libraries
		which match -flibdepends with the provided pattern.

2013-11-28 Blub

	* ~/.config/pgkdepdb now supersedes ~/.pkgdepdb

2013-11-22 Blub

	* database bump: 7
		now optionally contains a list of files of each package
	* new query: filelist
		--ls now queries files
	* new filter: filename filter for filelist queries
		-ffile
	* action: --rm-files - remove contained filelists

2013-11-16 Blub

	* filter added: libpath
	* bugfix: fix parsing of regex filter commandlines

2013-11-09 Blub

	* more package filters:
		optdepends, alldepends, provides, conflicts, replaces

2013-11-05 Blub
