@@ -1,6 +1,8 @@
 2014-XX-XX Release 0.1.8
 	- integrity checks now honor replacement packages
 	- DB version 9: storing ELF interpreter data
+	- -flib{rpath,runpath,interp}
+	- -fpkglib{rpath,runpath,interp}
 
 2014-05-03 Release 0.1.7.1
 	- Bugfixes:
